# baml-ts-sandbox

./: Cargo.toml  README.md  validate_prov.rs
baml_src/: simple_prompt.baml  tool_calling.baml  tool_union.baml  weather_tool.baml
crates/baml-agent-runner/: Cargo.toml  README.md
crates/baml-agent-runner/bindings/: AddNumbersInput.ts  AddNumbersOutput.ts
crates/baml-agent-runner/src/: main.rs
crates/baml-agent-runner/tests/: runner_test.rs
crates/baml-rt/: Cargo.toml  README.md
crates/baml-rt-a2a/: Cargo.toml  README.md
crates/baml-rt-a2a/bindings/: A2aSessionInput.ts  A2aSessionOutput.ts
crates/baml-rt-a2a/src/: a2a.rs  a2a_store.rs  a2a_transport.rs  a2a_types.rs  lib.rs  result_deduplicator.rs  result_pipeline.rs  result_processor.rs  tools.rs
crates/baml-rt-a2a/tests/: provenance_context_test.rs  task_streaming_test.rs
crates/baml-rt-builder/: Cargo.toml  README.md
crates/baml-rt-builder/src/: baml-agent-builder.rs  lib.rs
crates/baml-rt-builder/src/builder/: baml_gen.rs  compiler.rs  filesystem.rs  linter.rs  mod.rs  packager.rs  schema_to_baml.rs  service.rs  traits.rs  ts_gen.rs  types.rs
crates/baml-rt-builder/tests/: builder_test.rs  codegen_test.rs
crates/baml-rt-builder/tests/snapshots/: codegen_test__baml_array_types.snap  codegen_test__baml_class_from_schema.snap  codegen_test__baml_enum_from_schema.snap  codegen_test__baml_nested_types_from_schema.snap  codegen_test__baml_open_step_unit_input.snap  codegen_test__baml_primitives_in_class.snap  codegen_test__baml_tool_interfaces.snap  codegen_test__calculator_tool_metadata.snap  codegen_test__typescript_declarations.snap  codegen_test__typescript_tool_functions.snap
crates/baml-rt-core/: Cargo.toml  README.md
crates/baml-rt-core/src/: context.rs  correlation.rs  error.rs  ids.rs  lib.rs
crates/baml-rt-id/: Cargo.toml
crates/baml-rt-id/src/: lib.rs
crates/baml-rt-interceptor/: Cargo.toml  README.md
crates/baml-rt-interceptor/src/: interceptor.rs  lib.rs
crates/baml-rt-interceptor/src/interceptors/: tracing.rs
crates/baml-rt-interceptor/tests/: interception_test.rs
crates/baml-rt-observability/: Cargo.toml  README.md
crates/baml-rt-observability/src/: lib.rs  metrics.rs  scope.rs  spans.rs  tracing_setup.rs
crates/baml-rt-provenance/: Cargo.toml  PROV_MAPPING.md
crates/baml-rt-provenance/src/: builders.rs  document.rs  error.rs  events.rs  falkordb_store.rs  id_semantics.rs  interceptors.rs  lib.rs  normalizer.rs  store.rs  tool_index.rs  types.rs  vocabulary.rs
crates/baml-rt-provenance/tests/: falkordb_store_test.rs  normalizer_test.rs  store_test.rs  tool_index_test.rs
crates/baml-rt-provenance/tests/snapshots/: falkordb_store_test__falkordb_graph_snapshot.snap  falkordb_store_test__falkordb_large_document_snapshot.snap  falkordb_store_test__falkordb_send_message_snapshot.snap
crates/baml-rt-quickjs/: Cargo.toml  README.md
crates/baml-rt-quickjs/bindings/: EchoInput.ts  EchoOutput.ts
crates/baml-rt-quickjs/src/: baml.rs  baml_collector.rs  baml_execution.rs  baml_pre_execution.rs  context.rs  js_value_converter.rs  lib.rs  quickjs_bridge.rs  runtime.rs  traits.rs
crates/baml-rt-quickjs/tests/: baml_invoke_test.rs  baml_stream_test.rs  bridge_test.rs  sandbox_test.rs
crates/baml-rt-tools/: Cargo.toml  README.md
crates/baml-rt-tools/bindings/: CalculatorInput.ts  CalculatorOutput.ts  Expression.ts  MathOperation.ts  NotionSearchFilter.ts  NotionSearchInput.ts  NotionSearchOutput.ts  NotionSortDirection.ts
crates/baml-rt-tools/src/: bundles.rs  lib.rs  support.rs  tool_catalog.rs  tool_fsm.rs  tool_mapper.rs  tool_schema.rs  tools.rs  ts_gen.rs
crates/baml-rt-tools/tests/: direct_execution_test.rs  llm_workflows_test.rs  registration_test.rs  trait_system_test.rs
crates/baml-rt/src/: lib.rs
crates/baml-rt/tests/: contracts_test.rs  execution_test.rs  invoke_test.rs  llm_test.rs  tool_calling_test.rs
crates/test-support/: Cargo.toml  README.md
crates/test-support/src/: common.rs  lib.rs
crates/test-support/src/common/: test_tools.rs
crates/test-support/src/support/: a2a.rs  cli.rs  mod.rs  tools.rs
docs/: otel-metrics-instrumentation-guide.md  production-rust.md  quickjs_performance_analysis.md  testing-handbook.md
examples/: simple_prompt.baml
examples/agent-example/: manifest.json  package.json
examples/agent-example/baml_src/: simple_prompt.baml
examples/agent-example/src/: baml-runtime.d.ts
src/: baml.rs  baml_execution.rs  baml_parser.rs  context.rs  error.rs  js_value_converter.rs  lib.rs  main.rs  quickjs_bridge.rs  runtime.rs  tool_mapper.rs  tools.rs  traits.rs  types.rs
tests/: baml_compile_test.rs  baml_execution_test.rs  baml_invoke_test.rs  e2e_baml_tool_calling_test.rs  e2e_js_tool_llm_test.rs  e2e_llm_test.rs  e2e_llm_tool_calling_test.rs  e2e_tool_llm_test.rs  e2e_trait_tool_system_test.rs  js_tool_registration_test.rs  quickjs_baml_invoke_test.rs  quickjs_baml_stream_test.rs  quickjs_bridge_test.rs  tool_examples.rs  tool_registration_test.rs
tests/fixtures/: README.md
tests/fixtures/agents/tony-shrink/: manifest.json
tests/fixtures/agents/tony-shrink/baml_src/: tony_prompt.baml
tests/fixtures/agents/tony-shrink/src/: index.ts
tests/fixtures/agents/voidship-rites/: manifest.json
tests/fixtures/agents/voidship-rites/baml_src/: generated_tools.baml  voidship_prompt.baml
tests/fixtures/agents/voidship-rites/src/: index.ts
