[package]
name = "baml-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
baml-runtime = { path = "../baml/engine/baml-runtime" }
baml-types = { path = "../baml/engine/baml-lib/baml-types" }
internal-baml-core = { path = "../baml/engine/baml-lib/baml-core" }
quickjs_runtime = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
