[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["BAML Runtime Team"]
description = "BAML Runtime"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
oxc_parser = "0.112"
oxc_allocator = "0.112"
oxc_span = "0.112"
oxc_codegen = "0.112"
oxc_transformer = "0.112"
oxc_semantic = "0.112"
quickjs_runtime = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
async-trait = "0.1"
flate2 = "1.0"
tar = "0.4"
tokio-test = "0.4"
tracing-test = "0.2"
tempfile = "3.10"
dotenvy = "0.15"
opentelemetry = "0.26"
opentelemetry_sdk = "0.26"
tracing-opentelemetry = "0.27"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
text-to-cypher = { version = "0.1", default-features = false }
testcontainers = "0.23"
insta = "1.46.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
baml-runtime = { git = "https://github.com/BoundaryML/baml", rev = "d2cc1034826f3b56fa0ad3bcb5c4424de2de8b1c" }
baml-types = { git = "https://github.com/BoundaryML/baml", rev = "d2cc1034826f3b56fa0ad3bcb5c4424de2de8b1c" }
internal-baml-core = { git = "https://github.com/BoundaryML/baml", rev = "d2cc1034826f3b56fa0ad3bcb5c4424de2de8b1c" }
schemars = "1.1.0"
ts-rs = "11.1.0"
genco = "0.19.0"
inventory = "0.3.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

