[package]
name = "baml-agent-runner"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
baml-rt-a2a = { path = "../baml-rt-a2a" }
baml-rt-core = { path = "../baml-rt-core" }
baml-rt-observability = { path = "../baml-rt-observability" }
baml-rt-quickjs = { path = "../baml-rt-quickjs" }
anyhow = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-support = { path = "../test-support" }
baml-rt = { path = "../baml-rt" }
async-trait = { workspace = true }
dotenvy = { workspace = true }
