[package]
name = "baml-rt-a2a"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
baml-rt-core = { path = "../baml-rt-core" }
baml-rt-tools = { path = "../baml-rt-tools" }
inventory = { workspace = true }
baml-rt-quickjs = { path = "../baml-rt-quickjs" }
baml-rt-observability = { path = "../baml-rt-observability" }
baml-rt-provenance = { path = "../baml-rt-provenance" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
schemars = "1.1.0"
ts-rs = "11.1.0"

[dev-dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
test-support = { path = "../test-support" }
baml-rt = { path = "../baml-rt" }
insta = { workspace = true }
