[package]
name = "baml-rt-builder"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "baml-agent-builder"
path = "src/baml-agent-builder.rs"

[dependencies]
baml-rt-core = { path = "../baml-rt-core" }
baml-rt-observability = { path = "../baml-rt-observability" }
baml-rt-quickjs = { path = "../baml-rt-quickjs" }
baml-rt-tools = { path = "../baml-rt-tools" }
baml-runtime = { workspace = true }
internal-baml-core = { workspace = true }
serde_json = { workspace = true }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_codegen = { workspace = true }
oxc_transformer = { workspace = true }
oxc_semantic = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
genco = "0.19.0"

[dev-dependencies]
test-support = { path = "../test-support" }
baml-rt = { path = "../baml-rt" }
tempfile = { workspace = true }
insta = { workspace = true }
