[package]
name = "baml-rt-observability"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
baml-rt-core = { path = "../baml-rt-core" }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio = { workspace = true }
