[package]
name = "baml-rt-quickjs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
baml-rt-core = { path = "../baml-rt-core" }
baml-rt-tools = { path = "../baml-rt-tools" }
baml-rt-interceptor = { path = "../baml-rt-interceptor" }
baml-rt-observability = { path = "../baml-rt-observability" }
baml-runtime = { workspace = true }
baml-types = { workspace = true }
internal-baml-core = { workspace = true }
quickjs_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-support = { path = "../test-support" }
baml-rt = { path = "../baml-rt" }
tokio-test = { workspace = true }
