[package]
name = "baml-rt"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
name = "baml_rt"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
baml-rt-core = { path = "../baml-rt-core" }
baml-rt-tools = { path = "../baml-rt-tools", optional = true }
baml-rt-interceptor = { path = "../baml-rt-interceptor", optional = true }
baml-rt-quickjs = { path = "../baml-rt-quickjs", optional = true }
baml-rt-a2a = { path = "../baml-rt-a2a", optional = true }
baml-rt-builder = { path = "../baml-rt-builder", optional = true }
baml-rt-observability = { path = "../baml-rt-observability", optional = true }

[features]
default = [
    "tools",
    "interceptor",
    "quickjs",
    "a2a",
    "builder",
    "observability",
]
tools = ["dep:baml-rt-tools"]
interceptor = ["dep:baml-rt-interceptor"]
quickjs = ["dep:baml-rt-quickjs", "tools", "interceptor", "observability"]
a2a = ["dep:baml-rt-a2a", "quickjs"]
builder = ["dep:baml-rt-builder", "observability"]
observability = ["dep:baml-rt-observability"]

[dev-dependencies]
tokio-test = { workspace = true }
tracing-test = { workspace = true }
tempfile = { workspace = true }
dotenvy = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-opentelemetry = { workspace = true }
async-trait = { workspace = true }
test-support = { path = "../test-support" }
